muleplapeli/src/main/resources/api/examples/errors/404.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "NOT_FOUND"
      level: error
      description: "The requested resource is not found."